--- a/app/static/index.html
+++ b/app/static/index.html
@@ -24,7 +24,9 @@
 </div>
 
 <div class="mb-4" id="selectContainer" style="display:none;">
-	<label class="form-label" for="selectEtapas">Etapas similares encontradas:</label>
+	<label class="form-label" for="selectEtapas">
+        Etapas similares encontradas: <span id="starIcon">⭐</span>
+    </label>
 	<div class="input-group mb-2">
 		<select class="form-select" id="selectEtapas"></select>
 		<button class="btn btn-secondary" onclick="buscarEtapaSelecionada()" type="button">Continuar</button>
